assets/deployments/zipkin/zipkin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zipkin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zipkin
  template:
    metadata:
      labels:
        app: zipkin
    spec:
      containers:
        - image: openzipkin/zipkin
          name: zipkin
          imagePullPolicy: Always
          ports:
            - containerPort: 9411
          resources:
            requests:
              cpu: 100m
              memory: 200Mi
status: {}
