assets/deployments/zipkin/zipkin-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: zipkin
spec:
  selector:
    app: zipkin
#  type: NodePort
  ports:
  - name: zipkin-port
    protocol: TCP
    port: 9411
    targetPort: 9411
#    nodePort: 31002
#  externalIPs:
#  - 10.10.10.70
