assets/deployments/zipkin/zipkin-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: zipkin
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/request-modifier: "ReplacePathRegex:/diagnostics/api/v1/spans /api/v1/spans"
spec:
  rules:
  - host: --DNS_NAME--
    http:
      paths:

        - path: /diagnostics/api/v1/spans
          backend:
            serviceName: zipkin
            servicePort: 9411

        - path: /api/v2/spans
          backend:
            serviceName: zipkin
            servicePort: 9411

        - path: /zipkin
          backend:
            serviceName: zipkin
            servicePort: 9411
